add basic dependence

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "即刻影迷会2017",
+  "name": "即刻影迷会一周岁啦",
   "icons": [
     {
       "src": "favicon.ico",
